# RAG

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: MERCURY_2_ANALYSIS.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInput.tsx  CitationCard.tsx  GlassCanvas.tsx  ReasoningTrace.tsx  SettingsModal.tsx  Sidebar.tsx  StreamingResponse.tsx  TraceDrawer.tsx  WorkspaceSelector.tsx  index.ts
scripts/: evaluate.py  ingest.py
src/: __init__.py
src/agents/: __init__.py  correction.py  diagnosis.py  graph.py
src/api/: __init__.py  main.py  middleware.py  models.py
src/config/: circuit_breaker.py  constants.py  settings.py  telemetry.py
src/database/: __init__.py  connection.py  models.py  trace.py
src/embeddings/: __init__.py  bge_m3.py
src/generation/: __init__.py  generator.py  planner.py
src/ingestion/: __init__.py  chunker.py  enrichment.py  parser.py  pipeline.py
src/providers/: __init__.py  mercury.py
src/retrieval/: __init__.py  confidence.py  filters.py  fusion.py  reranker.py  search.py
src/validation/: __init__.py  claims.py  nli.py
tests/: __init__.py
tests/adversarial/: __init__.py  test_adversarial.py
tests/unit/: test_chunker.py  test_confidence.py
